unpackaged/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Operating_Entity_Currency_Iso_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Operating_Entity_Currency_Iso_Code__c</fullName>
    <formula>TEXT( ucinn_ascendv2__Stock__r.ucinn_ascendv2__Operating_Entity_Currency_Iso_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Entity Currency Iso Code</label>
    <type>Text</type>
</CustomField>