unpackaged/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Operating_Entity_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Operating_Entity_Payment_Amount__c</fullName>
    <formula>(( IF(ISPICKVAL($CustomMetadata.ucinn_ascendv2__Gift_Processing_Setting__mdt.ucinn_ascendv2__Gift_Processing_Setting.ucinn_ascendv2__Payment_Method__c, "Gift Amount"), ucinn_ascendv2__Payment__r.ucinn_ascendv2__Operating_Entity_Amount__c +  ucinn_ascendv2__Payment__r.ucinn_ascendv2__Non_Gift_Operating_Entity_Amount__c, ucinn_ascendv2__Payment__r.ucinn_ascendv2__Operating_Entity_Amount__c))  / ucinn_ascendv2__Payment__r.ucinn_ascendv2__Operating_Entity_Total_Payment__c) *   ucinn_ascendv2__Stock__r.ucinn_ascendv2__Operating_Entity_Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Entity Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>