unpackaged/main/default/objects/ucinn_ascendv2__Stock_Payment__c/fields/ucinn_ascendv2__Stock_Currency_High_Value_On_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stock_Currency_High_Value_On_Date__c</fullName>
    <formula>ucinn_ascendv2__Stock__r.ucinn_ascendv2__Stock_Currency_High_Value_on_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Currency High Value On Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>